--- a/pdWebMonitoring/monitoring/templates/monitoring_dashboard.html
+++ b/pdWebMonitoring/monitoring/templates/monitoring_dashboard.html
@@ -7,8 +7,8 @@
 <body>
     <h1>+Degree monitoring and control</h1>
 
-    <a href='units/'> Units Monitoring</a><br>
-    <a href='temperatures/'> Temperature Sensors Monitoring</a>
+    <a href= {% url 'monitoring:unit_monitoring' %}> Units Control and Monitoring</a><br><br>
+    <a href= {% url 'monitoring:temp_monitoring' %}> Temperature Sensors Monitoring</a>
 
 </body>
 </html>
