Network communication now simply with http - units will just request update of their data frequently enough - no more sockets

--- a/pdWebMonitoring/monitoring/templates/computingUnits/unit_detail.html
+++ b/pdWebMonitoring/monitoring/templates/computingUnits/unit_detail.html
@@ -7,10 +7,11 @@
 <body>
     <h1>Unit Control : {{ unit.name }} - {{ unit.id }}</h1>
     <h2>IP address : {{ unit.ip_address }}</h2>
+    <h2>Current running process : {{ unit.running_process }}</h2>
 
     <p>
         Change the current running application :
-        <form method='post' action={% url 'monitoring:unit_detail' unit.id %}>
+        <form method='post' action={% url 'monitoring:unit_detail' unit.unit_id %}>
         {% csrf_token %}
         <select name="processchange">
             <option value="mining">Cryptocurrency Mining</option>
