--- a/pdWebMonitoring/monitoring/templates/computingUnits/units_dashboard.html
+++ b/pdWebMonitoring/monitoring/templates/computingUnits/units_dashboard.html
@@ -37,7 +37,7 @@
   <ul>
       {% for unit in units %}
           <li><a href= {% url 'monitoring:unit_detail' unit.unit_id %}>{{ unit.name }}</a> :
-              <b id={{ unit.running_process }}> current running process</b></li>
+              <b>{{ unit.running_process }}</b></li>
       {% endfor %}
   </ul>
 </body>
