Removed last fix of unit process label updating because it was interfering with the DB update when submiting post request

--- a/pdWebMonitoring/monitoring/templates/computingUnits/unit_detail.html
+++ b/pdWebMonitoring/monitoring/templates/computingUnits/unit_detail.html
@@ -18,7 +18,7 @@
 
     <p>
         Change the current running application :
-        <form id="processForm" method='post' onsubmit="return false" action={% url 'monitoring:unit_detail' unit.unit_id %}>
+        <form id="processForm" method='post' action={% url 'monitoring:unit_detail' unit.unit_id %}>
         {% csrf_token %}
         <select id="selector" name="processchange">
             <option value="mining">Cryptocurrency Mining</option>
